# JustifiedEngine-Source

./: .gitignore  CMakeLists.txt  README.md
editor/: CMakeLists.txt
engine/: CMakeLists.txt  engine_main.cpp
engine/assets/: AssetManager.cpp  AssetManager.h
engine/audio/: Audio.cpp  Audio.h
engine/input/: Input.cpp  Input.h
engine/physics/: Physics.cpp  Physics.h
engine/renderer/: Renderer.cpp  Renderer.h
engine/scripting/: Scripting.cpp  Scripting.h
engine/window/: Window.cpp  Window.h
